--- a/app/public/home.html
+++ b/app/public/home.html
@@ -4,32 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beat Meet</title>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <!--Bootstrap-->
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
     />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!--CSS style sheet-->
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <!--font awesome glyphicons-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
+    />
   </head>
   <body>
-        <div class="text-center">
-            <img src="drawing-drums-drumset-5.png" id="logo">
-        </div>
+    <div class="text-center">
+      <img src="drawing-drums-drumset-5.png" id="logo" />
+    </div>
     <div class="container">
       <div class="jumbotron">
-        <h1 class="display-4">
-            <i class="fas fa-drum"></i> Beat Meet
-        </h1>
+        <h1 class="display-4"><i class="fas fa-drum"></i> Beat Meet</h1>
 
         <hr class="my-4" />
         <h2>Still looking for a drummer? Look no farther!</h2>
         <h2>
           Just answer a few questions about what kind of beat you need.
         </h2>
-        <a class="btn btn-primary btn-lg" href="#" role="button"
-          ><span id="survey-btn"class="glyphicon glyphicon-list-alt"></span> Go To Survey</a
+        <a class="btn btn-primary btn-lg" href="#" role="button" id="survey-btn"
+          ><span  class="glyphicon glyphicon-list-alt"></span> Go
+          To Survey</a
         >
       </div>
       <footer>
@@ -42,5 +48,10 @@
         </div>
       </footer>
     </div>
+    <script>
+      $("#survey-btn").on("click", function () {
+        window.location = "/survey";
+      });
+    </script>
   </body>
 </html>
