--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -234,7 +234,7 @@
 
     <!--modal content-->
 
-    <div class="container">
+    <!-- <div class="container"> -->
       <div class="bg-modal">
         <div class="modal-content">
           <div class="close">+</div>
@@ -243,7 +243,7 @@
           <h4 id="match-name"></h4>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
 
     <!--jQuery Javascript-->
     <script>
@@ -273,6 +273,7 @@
         $("html, body").css({
           overflow: "hidden",
           height: "100%",
+          width: "100%",
         });
 
         // assign the survey data as key pairs and storing it into an array
